[package]
name = "BMP180-MQTT"
version = "0.1.0"
edition = "2021"

[dependencies]
bmp085 = "0.1.1"
clap = { version = "4.5.21", features = ["derive"] }
env_logger = "0.11.5"
i2cdev = "0.3.2"
rumqttc = "0.24.0"
time = "0.3.36"
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "macros"] }
log = "0.4.22"
toml = "0.8.19"
serde_derive = "1.0.215"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.215", features = ["derive"] }
